css updates to center text

--- a/resources/assets/sass/mixins/mediaQueries.scss
+++ b/resources/assets/sass/mixins/mediaQueries.scss
@@ -23,7 +23,7 @@
     }
     #centerText
     {
-      max-height: 720px;
+      max-height: 690px;
     }
     #centerTextContent
     {
@@ -43,7 +43,7 @@
     }
     #createOptions
     {
-      max-height: 720px;
+      max-height: 30%;
     }
   }
 }
