--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -483,7 +483,7 @@ article
   margin: 5px auto;
   width: 99%;
   height: auto;
-  max-height: 500px;
+  max-height: 690px;
   overflow: auto;
 }
 #centerTextContent
@@ -503,7 +503,7 @@ article
   margin: 0 auto;
   padding: 3px;
   height: auto;
-  max-height: 720px;
+  max-height: 30%;
 }
 .createTitleText
 {
