--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -394,9 +394,8 @@ td
 {
   width: 50%;
   float: right;
+  overflow: auto;
 }
-
-
 
 //Flash Messages:
 .flash-info
@@ -496,7 +495,6 @@ article
   height: auto;
   max-height: 350px;
   overflow:auto;
-
 }
 #createOptions
 {
