--- a/resources/assets/sass/mixins/mediaQueries.scss
+++ b/resources/assets/sass/mixins/mediaQueries.scss
@@ -1,7 +1,7 @@
 //Desktop
 @mixin desktop($desktopBackground)
 {
-  @media screen and (min-width: 1024px)
+  @media screen and (min-width: 1024px) and (min-height: 951px)
   {
     html
     {
@@ -68,6 +68,76 @@
 
   }
 }
+
+//Small Desktop
+@media screen and (min-width: 1024px) and (max-height : 950px)
+{
+  html
+  {
+    //background-image: url($desktopBackground);
+    background-color: orange;
+  }
+  .topNav
+  {
+    width: 65%;
+  }
+
+  .interactButton
+  {
+    font-size: 100%;
+  }
+  .navButton
+  {
+    font-size: 100%;
+  }
+  #centerText
+  {
+    max-height: 580px;
+  }
+  #centerTextContent
+  {
+    max-height: 510px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .createTitleText
+  {
+    width: 350px;
+  }
+  .innerProfileMenus
+  {
+    height: 210px;
+  }
+  #leftSide
+  {
+    height: auto;
+  }
+  #rightSide
+  {
+    height: auto;
+  }
+  #createOptions
+  {
+    max-height: 25%;
+  }
+
+  .topNav > ul > li > a
+  {
+    padding: 0 24px;
+  }
+  .topNav > ul > li > div
+  {
+    width: 165px;
+  }
+  .topNav > ul > li > div ul > li > a
+  {
+    padding: 12px 24px;
+  }
+
+}
+
+
+
 //Tablet
 @mixin tablet($tabletBackground)
 {
@@ -89,11 +159,11 @@
     }
     #centerText
     {
-      max-height: 730px;
+      max-height: 530px;
     }
     #centerTextContent
     {
-      max-height: 645px;
+      max-height: 445px;
     }
     .innerProfileMenus
     {
@@ -118,21 +188,22 @@
     }
   }
 
-  @media screen and (max-width: 1023px) and (orientation: landscape)
+  //Tablet Landscape
+  @media screen and (max-width: 2500px) and (min-height: 700px)
   {
     html {
       //background-image: url($tabletBackground);
       background-color: pink;
     }
     .topNav {
-      max-width: 70%;
+      max-width: 75%;
     }
     #centerContent {
       width: 50%;
       height: 85%;
     }
     #centerText {
-      max-height: 550px;
+      max-height: 450px;
     }
     #centerTextContent
     {
@@ -196,11 +267,11 @@
     #centerContent
     {
       width: 97%;
-      height: 83%;
+      height: 84%;
     }
     #centerText
     {
-      max-height: 425px;
+      max-height: 335px;
     }
     .createTitleText
     {
@@ -208,7 +279,7 @@
     }
     #centerTextContent
     {
-      max-height: 240px;
+      max-height: 110px;
       padding-left: 3px;
       padding-right: 3px;
     }
@@ -219,7 +290,7 @@
     }
     #createOptions
     {
-      max-height: 410px;
+      max-height: 330px;
     }
     #leftSide
     {
@@ -250,16 +321,20 @@
   }
 
   //Small screen mobile
-  @media screen and (max-width: 400px) and (max-height: 499px)
+  @media screen and (max-width: 955px) and (max-height: 699px) and (orientation: landscape)
   {
     html
     {
       //background-image: url($mobileBackground);
       background-color: purple;
     }
+    h2
+    {
+      font-size: 90%;
+    }
     .topNav
     {
-      max-width: 97%;
+      max-width: 55%;
     }
     .topNav > ul > li > a
     {
@@ -275,12 +350,12 @@
     }
     #centerContent
     {
-      width: 97%;
-      height: 83%;
+      width: 56%;
+      height: 70%;
     }
     #centerText
     {
-      max-height: 370px;
+      max-height: 175px;
     }
     .createTitleText
     {
@@ -288,7 +363,7 @@
     }
     #centerTextContent
     {
-      max-height: 155px;
+      max-height: 65px;
       padding-left: 3px;
       padding-right: 3px;
     }
@@ -299,19 +374,22 @@
     }
     #createOptions
     {
-      max-height: 350px;
+      max-height: 190px;
     }
+
     #leftSide
     {
-      top: 24%;
-      height: 30%;
-      visibility: hidden;
+      top: 3%;
+      height: auto;
+      visibility: visible;
+      left: .1em;
     }
     #rightSide
     {
-      top: 24%;
-      height: 30%;
-      visibility: hidden;
+      top: 3%;
+      height: auto;
+      visibility: visible;
+      right: .1em;
     }
     .innerProfileMenus
     {
