--- a/resources/assets/sass/mixins/mediaQueries.scss
+++ b/resources/assets/sass/mixins/mediaQueries.scss
@@ -189,7 +189,7 @@
   }
 
   //Tablet Landscape
-  @media screen and (max-width: 2500px) and (min-height: 700px)
+  @media screen and (max-width: 2500px) and (min-height: 700px) and (max-height: 870px)
   {
     html {
       //background-image: url($tabletBackground);
