--- a/resources/assets/sass/mixins/mediaQueries.scss
+++ b/resources/assets/sass/mixins/mediaQueries.scss
@@ -1,137 +1,106 @@
 //Desktop
-@mixin desktop($desktopBackground)
-{
-  @media screen and (min-width: 1401px) and (min-height: 850px)
-  {
-    html
-    {
-      //background-image: url($desktopBackground);
+@mixin desktop($desktopBackground) {
+  @media screen and (min-width: 1401px) and (min-height: 850px) {
+    html {
+      background-image: url($desktopBackground);
       background-color: black;
     }
-    .topNav
-    {
+    .topNav {
       width: 65%;
     }
 
-    .interactButton
-    {
+    .interactButton {
       font-size: 100%;
     }
-    .navButton
-    {
+    .navButton {
       font-size: 100%;
     }
-    #centerText
-    {
+    #centerText {
       max-height: 630px;
     }
-    #centerTextContent
-    {
+    #centerTextContent {
       max-height: 530px;
       padding-left: 15px;
       padding-right: 15px;
     }
-    .createTitleText
-    {
+    .createTitleText {
       width: 350px;
     }
-    .innerProfileMenus
-    {
+    .innerProfileMenus {
       height: 210px;
     }
-    #leftSide
-    {
+    #leftSide {
       height: auto;
     }
-    #rightSide
-    {
+    #rightSide {
       height: auto;
     }
-    #createOptions
-    {
+    #createOptions {
       max-height: 30%;
     }
 
-    .topNav > ul > li > a
-    {
+    .topNav > ul > li > a {
       padding: 0 24px;
     }
-    .topNav > ul > li > div
-    {
+    .topNav > ul > li > div {
       width: 165px;
     }
-    .topNav > ul > li > div ul > li > a
-    {
+    .topNav > ul > li > div ul > li > a {
       padding: 12px 24px;
     }
   }
-}
 
-//Small Desktop
-@media screen and (min-width: 656px) and (max-height: 849px)
-{
-  html
-  {
-    //background-image: url($desktopBackground);
-    background-color: orange;
-  }
-  .topNav
-  {
-    width: 65%;
-  }
+  //Small Desktop
+  @media screen and (min-width: 751px) and (max-height: 849px) {
+    html {
+      background-image: url($desktopBackground);
+      background-color: orange;
+    }
+    .topNav {
+      width: 65%;
+    }
 
-  .interactButton
-  {
-    font-size: 100%;
-  }
-  .navButton
-  {
-    font-size: 100%;
-  }
-  #centerText
-  {
-    max-height: 430px;
-  }
-  #centerTextContent
-  {
-    max-height: 300px;
-    padding-left: 15px;
-    padding-right: 15px;
-  }
-  #createOptions
-  {
-    max-height: 425px;
-  }
-  .createTitleText
-  {
-    width: 350px;
-  }
-  .innerProfileMenus
-  {
-    height: 210px;
-  }
-  #leftSide
-  {
-    height: auto;
-  }
-  #rightSide
-  {
-    height: auto;
-  }
+    .interactButton {
+      font-size: 100%;
+    }
+    .navButton {
+      font-size: 100%;
+    }
+    #centerText {
+      max-height: 430px;
+    }
+    #centerTextContent {
+      max-height: 300px;
+      padding-left: 15px;
+      padding-right: 15px;
+    }
+    #createOptions {
+      max-height: 425px;
+    }
+    .createTitleText {
+      width: 350px;
+    }
+    .innerProfileMenus {
+      height: 210px;
+    }
+    #leftSide {
+      height: auto;
+    }
+    #rightSide {
+      height: auto;
+    }
 
-  .topNav > ul > li > a
-  {
-    padding: 0 24px;
-  }
-  .topNav > ul > li > div
-  {
-    width: 165px;
-  }
-  .topNav > ul > li > div ul > li > a
-  {
-    padding: 12px 24px;
-  }
+    .topNav > ul > li > a {
+      padding: 0 24px;
+    }
+    .topNav > ul > li > div {
+      width: 165px;
+    }
+    .topNav > ul > li > div ul > li > a {
+      padding: 12px 24px;
+    }
 
+  }
 }
 
 
@@ -139,11 +108,11 @@
 //Tablet Portrait
 @mixin tablet($tabletBackground)
 {
-  @media screen and (max-width: 655px) and (min-height: 600px)
+  @media screen and (max-width: 750px)
   {
     html
     {
-      //background-image: url($tabletBackground);
+      background-image: url($tabletBackground);
       background-color: blue;
     }
     .topNav
@@ -191,10 +160,10 @@
   }
 
   //Tablet Landscape
-  @media screen and (min-width: 656px) and (max-width: 1400px)
+  @media screen and (min-width: 751px) and (max-width: 1400px)
   {
     html {
-      //background-image: url($tabletBackground);
+      background-image: url($tabletBackground);
       background-color: green;
     }
     .topNav {
@@ -202,10 +171,10 @@
     }
     #centerContent {
       width: 50%;
-      height: 85%;
+      height: 82%;
     }
     #centerText {
-      max-height: 600px;
+      max-height: 550px;
     }
     #centerTextContent
     {
@@ -213,7 +182,7 @@
     }
     #createOptions
     {
-      max-height: 605px;
+      max-height: 530px;
     }
 
     #leftSide
@@ -250,7 +219,7 @@
 @mixin mobile($mobileBackground) {
   @media screen and (max-width: 420px) {
     html {
-      //background-image: url($mobileBackground);
+      background-image: url($mobileBackground);
       background-color: red;
     }
     .topNav {
@@ -314,7 +283,7 @@
   @media screen and (max-width: 655px) and (max-height: 399px)
   {
     html {
-      //background-image: url($mobileBackground);
+      background-image: url($mobileBackground);
       background-color: purple;
     }
     h2 {
