--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -37,7 +37,7 @@ a:visited {
 
 }
 /* mouse over link */
-a:hover {
+a:hover, a.hover_effect {
   color: #009900;
 }
 
@@ -45,6 +45,11 @@ a:hover {
 a:active {
   color: #00CC33;
 
+}
+
+.hover {
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
 }
 
 //Navigation
