--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -37,7 +37,7 @@ a:visited {
 
 }
 /* mouse over link */
-a:hover, a.hover_effect {
+a:hover {
   color: #009900;
 }
 
@@ -50,7 +50,10 @@ a:active {
 .hover {
   -webkit-user-select: none;
   -webkit-touch-callout: none;
+  margin: 0px;
+  padding: 0px;
 }
+
 
 //Navigation
 .topNav
