--- a/resources/assets/sass/utility/siteVars.scss
+++ b/resources/assets/sass/utility/siteVars.scss
@@ -8,7 +8,7 @@ $navButtonColor1: #33FF00;
 $navButtonColor2: #188BC0;
 $navHoverColor1:  #33FF00;
 $navHoverColor2:  #000000;
-$navTextColor:    #F0F0F0;
+$navTextColor:    #FFFFFF;
 $navTextHoverColor: #FFFFFF;
 
 //Action Button Variables:
