--- a/resources/assets/sass/mixins/baseButton.scss
+++ b/resources/assets/sass/mixins/baseButton.scss
@@ -1,7 +1,7 @@
 @mixin baseButton
 {
   padding:8px 13px;
-  font-family: "Comic Sans MS", Arial, sans-serif;
+  font-family: "Open Sans", Arial, serif;
   border-radius:7px;
   -moz-border-radius:7px;
   -webkit-border-radius:7px;
