--- a/resources/assets/sass/mixins/nav.scss
+++ b/resources/assets/sass/mixins/nav.scss
@@ -1,6 +1,6 @@
 @mixin nav()
 {
-  font-family: "Comic Sans MS", Arial, sans-serif;
+  font-family: "Open Sans", Arial, serif;
   background-color: #101010;
   border: 1px solid #A8A8A8;
   border-radius: 4px;
@@ -64,9 +64,6 @@
   background: -moz-linear-gradient($navHoverColor1, $navHoverColor2);
   background: linear-gradient($navHoverColor1, $navHoverColor2);
 }
-
-
-
 @mixin navDiv()
 {
   background-color: rgb( 40, 44, 47 );
