Payments, pictures, sponsor upload, beacon extensions

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -51,6 +51,7 @@ a:active {
   padding: 0px;
   color: #000000;
   width: auto;
+  cursor: pointer;
 }
 .extras:hover, .extras.hover_effect {
   color: #00CC33;
