Mobile bug test for scrolling

--- a/resources/assets/sass/mixins/mediaQueries.scss
+++ b/resources/assets/sass/mixins/mediaQueries.scss
@@ -270,6 +270,8 @@
       max-height: 185px;
       padding-left: 3px;
       padding-right: 3px;
+      //-webkit-overflow-scrolling: touch;
+      z-index: 0;
     }
     #createBodyText {
       padding-left: 1px;
