--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -616,7 +616,7 @@ td
   width: 50%;
   height: 80%;
   font-family: "Open Sans", Arial, serif;
-  z-index: 2;
+  //z-index: 2;
   margin: 1.5% auto;
 
 }
