--- a/resources/assets/sass/mixins/mediaQueries.scss
+++ b/resources/assets/sass/mixins/mediaQueries.scss
@@ -271,7 +271,7 @@
       max-height: 185px;
       padding-left: 3px;
       padding-right: 3px;
-      -webkit-overflow-scrolling: touch;
+      position: relative;
       //z-index: 0;
     }
     #createBodyText {
