--- a/resources/assets/sass/mixins/mediaQueries.scss
+++ b/resources/assets/sass/mixins/mediaQueries.scss
@@ -16,7 +16,7 @@
       font-size: 100%;
     }
     #centerText {
-      max-height: 660px;
+      max-height: 630px;
     }
     #centerTextContent {
       max-height: 530px;
@@ -130,7 +130,7 @@
     }
     .topNav
     {
-      max-width: 69%;
+      max-width: 79%;
     }
     #centerContent
     {
@@ -154,18 +154,25 @@
       height: 175px;
     }
 
-    #leftSide
-    {
-      top: 24%;
-      height: 30%;
-      visibility: hidden;
+    #leftSide {
+      top: 80%;
+      height: 20%;
+      width: 45%;
+      visibility: visible;
+      left: .01em;
+      font-size: 0%;
+
     }
-    #rightSide
-    {
-      top: 24%;
-      height: 30%;
-      visibility: hidden;
+    #rightSide {
+      top: 80%;
+      height: 20%;
+      width: 45%;
+      visibility: visible;
+      right: .01em;
+      font-size: 0%;
     }
+
+
     .topNav > ul > li > a
     {
       padding: 0 18px;
@@ -235,7 +242,7 @@
 }
 //Mobile Portrait
 @mixin mobile($mobileBackground) {
-  @media screen and (max-width: 419px) {
+  @media screen and (max-width: 419px) and (min-height: 351px) {
     html {
       background-image: url($mobileBackground);
       background-color: black;
@@ -262,7 +269,6 @@
     }
     #centerText {
       max-height: 320px;
-      //position: fixed;
     }
     .createTitleText {
       width: 250px;
@@ -271,8 +277,6 @@
       max-height: 185px;
       padding-left: 3px;
       padding-right: 3px;
-      position: relative;
-      //z-index: 0;
     }
     #createBodyText {
       padding-left: 1px;
@@ -282,14 +286,102 @@
       max-height: 320px;
     }
     #leftSide {
-      top: 24%;
-      height: 30%;
-      visibility: hidden;
+      top: 80%;
+      height: 18%;
+      width: 45%;
+      visibility: visible;
+      left: .01em;
+      font-size: 0%;
+
     }
     #rightSide {
-      top: 24%;
-      height: 30%;
+      top: 80%;
+      height: 18%;
+      width: 45%;
+      visibility: visible;
+      right: .01em;
+      font-size: 0%;
+    }
+    .innerProfileMenus {
+      height: 70px;
+    }
+    .innerPhotos {
+      height: 100px;
+    }
+    .listResourceLeft {
+      padding-left: 1%;
+      width: 45%;
+    }
+    .interactButton
+    {
+      padding: 3px 1px;
+    }
+    .profileNav > ul > li > div ul > li
+    {
+      display: block;
+    }
+  }
+
+  //Small screen mobile portrait
+  @media screen and (max-width: 300px) and (max-height: 350px) {
+    html {
+      background-image: url($mobileBackground);
+      background-color: black;
+    }
+    .topNav {
+      max-width: 97%;
+    }
+    .topNav > ul > li > a {
+      padding: 0 1px;
+    }
+    .topNav > ul > li > p {
+      padding: 0 1px;
+    }
+    .topNav > ul > li > div {
+      width: 92px;
+    }
+    .topNav > ul > li > div ul > li > a {
+      padding: 7px 1px;
+    }
+    #centerContent {
+      width: 97%;
+      height: 84%;
+      margin: 1.5% auto;
+    }
+    #centerText {
+      max-height: 320px;
+    }
+    .createTitleText {
+      width: 250px;
+    }
+    #centerTextContent {
+      max-height: 185px;
+      padding-left: 3px;
+      padding-right: 3px;
+    }
+    #createBodyText {
+      padding-left: 1px;
+      padding-right: 1px;
+    }
+    #createOptions {
+      max-height: 320px;
+    }
+    #leftSide {
+      top: 80%;
+      height: 18%;
+      width: 45%;
       visibility: hidden;
+      left: .01em;
+      font-size: 0%;
+
+    }
+    #rightSide {
+      top: 80%;
+      height: 18%;
+      width: 45%;
+      visibility: hidden;
+      right: .01em;
+      font-size: 0%;
     }
     .innerProfileMenus {
       height: 70px;
