--- a/public/css/app.css
+++ b/public/css/app.css
@@ -905,7 +905,7 @@ article {
   }
 }
 
-@media screen and (max-width: 851px) {
+@media screen and (max-width: 851px) and (min-height: 600px) {
   html {
     background-image: url("/img/backgroundLandscape.jpg");
     background-color: black;
@@ -1026,7 +1026,7 @@ article {
   }
 }
 
-@media screen and (max-width: 419px) and (min-height: 351px) {
+@media screen and (max-width: 419px) and (min-height: 481px) {
   html {
     background-image: url("/img/backgroundPortrait.jpg");
     background-color: black;
@@ -1121,7 +1121,7 @@ article {
   }
 }
 
-@media screen and (max-width: 300px) and (max-height: 350px) {
+@media screen and (max-width: 320px) and (max-height: 480px) {
   html {
     background-image: url("/img/backgroundPortrait.jpg");
     background-color: black;
@@ -1154,7 +1154,7 @@ article {
   }
 
   #centerText {
-    max-height: 320px;
+    max-height: 255px;
   }
 
   .createTitleText {
@@ -1162,7 +1162,7 @@ article {
   }
 
   #centerTextContent {
-    max-height: 185px;
+    max-height: 135px;
     padding-left: 3px;
     padding-right: 3px;
   }
@@ -1178,18 +1178,18 @@ article {
 
   #leftSide {
     top: 80%;
-    height: 18%;
+    height: 20%;
     width: 45%;
-    visibility: hidden;
+    visibility: visible;
     left: .01em;
     font-size: 0%;
   }
 
   #rightSide {
     top: 80%;
-    height: 18%;
+    height: 20%;
     width: 45%;
-    visibility: hidden;
+    visibility: visible;
     right: .01em;
     font-size: 0%;
   }
