--- a/resources/assets/sass/mixins/mediaQueries.scss
+++ b/resources/assets/sass/mixins/mediaQueries.scss
@@ -121,7 +121,7 @@
 //Tablet Portrait
 @mixin tablet($tabletBackground)
 {
-  @media screen and (max-width: 851px)
+  @media screen and (max-width: 851px) and (min-height: 600px)
   {
     html
     {
@@ -246,7 +246,7 @@
 }
 //Mobile Portrait
 @mixin mobile($mobileBackground) {
-  @media screen and (max-width: 419px) and (min-height: 351px) {
+  @media screen and (max-width: 419px) and (min-height: 481px) {
     html {
       background-image: url($mobileBackground);
       background-color: black;
@@ -327,7 +327,7 @@
   }
 
   //Small screen mobile portrait
-  @media screen and (max-width: 300px) and (max-height: 350px) {
+  @media screen and (max-width: 320px) and (max-height: 480px) {
     html {
       background-image: url($mobileBackground);
       background-color: black;
@@ -353,13 +353,13 @@
       margin: 1.5% auto;
     }
     #centerText {
-      max-height: 320px;
+      max-height: 255px;
     }
     .createTitleText {
       width: 250px;
     }
     #centerTextContent {
-      max-height: 185px;
+      max-height: 135px;
       padding-left: 3px;
       padding-right: 3px;
     }
@@ -372,18 +372,18 @@
     }
     #leftSide {
       top: 80%;
-      height: 18%;
+      height: 20%;
       width: 45%;
-      visibility: hidden;
+      visibility: visible;
       left: .01em;
       font-size: 0%;
 
     }
     #rightSide {
       top: 80%;
-      height: 18%;
+      height: 20%;
       width: 45%;
-      visibility: hidden;
+      visibility: visible;
       right: .01em;
       font-size: 0%;
     }
